--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</div>
 			<a href="http://google.com" target="_blank">
 				<button>
-					ver mas
+					ver más
 					<span class="icon-arrow-right"></span>
 				</button>
 			</a>
